# CentrifugeSim

./: .gitignore  README.md  pyproject.toml
src/centrifugesim/: constants.py
src/centrifugesim/chemistry/: chemistry.py  chemistry_helper.py  maxwellian_rates.py  plasma_chemistry_helper.py
src/centrifugesim/coils/: RF_coil_helper.py  coils.py
src/centrifugesim/evolve/: do_step.py
src/centrifugesim/field_solver/: fem_phi_solver.py  finite_volume_phi_solver.py  hybrid_pic_model.py  hybrid_pic_model_kernels_numba.py  vacuum_field_solver.py
src/centrifugesim/fluids/: electron_fluid.py  electron_fluid_helper.py  electron_fluid_kernels_numba.py  ion_fluid.py  ion_fluid_helper.py  neutral_fluid.py  neutral_fluid_helper.py  neutral_fluid_kernels_numba.py
src/centrifugesim/geometry/: geometry.py
src/centrifugesim/initialization/: init_particles.py
src/centrifugesim/output/: output.py  plot.py
src/centrifugesim/particles/: particle_container.py  particle_container_helper.py  particle_container_kernels.py
tests/: test_cupy.py
